tests/NormalTests/paczka1/fuzzy1/72678143.err
Error in line 7: gyIdvrS S293 68,6
Error in line 12: Z0DvI29cojL A514 91,1
Error in line 8: gyIdvrS A459 9,7
Error in line 14: gyIdvrS A514 38,2
Error in line 27: Z0DvI29cojL S327 44,9
